# fast-dataposition

./: Dockerfile  INSTALL.md  README.md  TODO.md  alembic.ini  dataposition.db  docker-compose.yml  environment.yml  prestart.sh  pyproject.toml
app/: crud.py  main.py  models.py  pqwa_csv.py  schemas.py
app/db/: __init__.py  base.py  session.py
data/: profiles.json  qr_databat.csv  qr_databat_2020-11-12.csv
migrations/: env.py
migrations/versions/: 35604fa021c1_create_profiles_users_questions_tables.py
src/: app.py  html.py  labelled_enum.py  labelled_enum.pyi  model.py
static/: style.css
templates/: base.html  form.html  summary.html
