[tool.poetry]
name = "fast-dataposition"
version = "0.1.0"
description = ""
authors = ["Mathieu Morey <mathieu.morey@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.4.3"
Starlette-WTF = "^0.3.0"
databases = {extras = ["sqlite"], version = "^0.4.1"}
fastapi = {extras = ["all"], version = "^0.62.0"}
pydantic = {extras = ["email"], version = "^1.7.3"}
pandas = "^1.1.5"
inflect = "^5.0.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "^0.790"
pycodestyle = "^2.6.0"
pyflakes = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
